docs-archive/apache-airflow-providers-keycloak/0.10.0/_sources/_api/airflow/providers/keycloak/auth_manager/datamodels/token/index.rst.txt
airflow.providers.keycloak.auth_manager.datamodels.token
========================================================

.. py:module:: airflow.providers.keycloak.auth_manager.datamodels.token


Attributes
----------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.datamodels.token.TokenUnion


Classes
-------

.. autoapisummary::

   airflow.providers.keycloak.auth_manager.datamodels.token.TokenResponse
   airflow.providers.keycloak.auth_manager.datamodels.token.TokenPasswordBody
   airflow.providers.keycloak.auth_manager.datamodels.token.TokenClientCredentialsBody
   airflow.providers.keycloak.auth_manager.datamodels.token.TokenBody


Module Contents
---------------

.. py:class:: TokenResponse(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.BaseModel`


   Token serializer for responses.


   .. py:attribute:: access_token
      :type:  str


.. py:class:: TokenPasswordBody(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.StrictBaseModel`


   Password grant token serializer for post bodies.


   .. py:attribute:: grant_type
      :type:  Literal['password']
      :value: 'password'



   .. py:attribute:: username
      :type:  str
      :value: None



   .. py:attribute:: password
      :type:  str
      :value: None



   .. py:method:: create_token(expiration_time_in_seconds)

      Create token using password grant.



.. py:class:: TokenClientCredentialsBody(/, **data)

   Bases: :py:obj:`airflow.api_fastapi.core_api.base.StrictBaseModel`


   Client credentials grant token serializer for post bodies.


   .. py:attribute:: grant_type
      :type:  Literal['client_credentials']


   .. py:attribute:: client_id
      :type:  str
      :value: None



   .. py:attribute:: client_secret
      :type:  str
      :value: None



   .. py:method:: create_token(expiration_time_in_seconds)

      Create token using client credentials grant.



.. py:data:: TokenUnion

.. py:class:: TokenBody

   Bases: :py:obj:`pydantic.RootModel`\ [\ :py:obj:`TokenUnion`\ ]


   Token request body.


   .. py:method:: default_grant_type(data)
      :classmethod:


      Add default grant_type for discrimination.



